--- a/resources/js/components/Admin/Pages/Login/Login.css
+++ b/resources/js/components/Admin/Pages/Login/Login.css
@@ -1,6 +1,11 @@
 div.login-box {
     width: "60%"
 }
+.login-banner{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
 @media screen and (min-width:721px) and (max-width:1280) {
     div.login-box {
         width: "60%"
